# drunken-data-quality

./: .gitignore  .travis.yml  README.md  build.sbt
project/: plugin.sbt
python/: .gitignore  README.rst  manual_test.py  requirements.txt  run_integration_tests.sh  setup.cfg  setup.py  test-requirements.txt
python/pyddq/: core.py  jvm_conversions.py  reporters.py  streams.py  utils.py
python/tests/integration/: test_check.py  test_constraints.py  test_reporters.py  utils.py
python/tests/unit/: conftest.py  test_check.py  test_constraints.py  test_reporters.py  test_streams.py  utils.py
src/main/scala/de/frosner/ddq/: Check.scala  CheckResult.scala  Constraint.scala  ConstraintResult.scala  Runner.scala
src/main/scala/de/frosner/ddq/check/: Check.scala  CheckResult.scala  Constraint.scala  ConstraintResult.scala  Runner.scala
src/main/scala/de/frosner/ddq/constraints/: AlwaysNullConstraint.scala  AlwaysNullConstraintResult.scala  AnyOfConstraint.scala  AnyOfConstraintResult.scala  ColumnColumnConstraint.scala  ColumnColumnConstraintResult.scala  ColumnConstraintUtil.scala  ConditionalColumnConstraint.scala  ConditionalColumnConstraintResult.scala  Constraint.scala  ConstraintResult.scala  ConstraintStatus.scala  ConstraintUtil.scala  CustomConstraint.scala  DateFormatConstraint.scala  DateFormatConstraintResult.scala  ExactEqualityConstraint.scala  ForeignKeyConstraint.scala  (+18 more)
src/test/resources/: log4j.properties
src/test/scala/de/frosner/ddq/: CheckTest.scala  ReporterTest.scala  RunnerTest.scala  TestDataFrameContext.scala  TestHiveContext.scala
(+50 files in other folders)
