[metadata]
name = pyddq
summary = Python API for Drunken Data Quality
author = Aleksandr Sorokoumov
author-email = aleksandr.sorokoumov@gmail.com
license = Apache License Version 2.0
home-page = https://github.com/FRosner/drunken-data-quality/python
description-file = README.rst
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[test]
# py.test options when running `python setup.py test`
addopts = tests/unit

[integration_test]
addopts = tests/integration

[pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov pyddq --cov-report term-missing
    --verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
